<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ac.ict.yxd.itug.DetailActivity"
    android:padding="20dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailPatient"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:textColor="#0000ff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/tv_detail_patient"
        android:layout_alignParentEnd="true"
        android:textColor="#bdbdbd"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailDate"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_detail_date"
            android:text="111"
            android:layout_alignParentEnd="true"
            android:textColor="#bdbdbd"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailTime"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_detail_time"
            android:text="111"
            android:layout_alignParentEnd="true"
            android:textColor="#bdbdbd"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailNumTr"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_detail_numtr"
            android:text="111"
            android:layout_alignParentEnd="true"
            android:textColor="#bdbdbd"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailDis"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_detail_dis"
            android:text="111"
            android:layout_alignParentEnd="true"
            android:textColor="#bdbdbd"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/chart"
        android:id="@+id/iv_detail_chart"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
